# MineCompanion-WebUI

./: .env.backup  .gitignore  AGENTS.md  README.md  main.py  package-lock.json  package.json  pyproject.toml
api/: health.py  middleware.py  monitor_ws.py  protocol.py  rate_limiter.py  stats.py  validation.py  websocket.py
api/handlers/: context.py  conversation.py  registry.py
api/routes/: llm.py  llm_mock.py
config/: settings.example.json  settings.json  settings.py
core/: dependencies.py  interfaces.py
core/llm/: service.py
core/monitor/: connection_manager.py  event_bus.py  metrics_collector.py
frontend/: components.json  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx
frontend/src/components/admin-panel/: admin-panel-layout.tsx  collapse-menu-button.tsx  content-layout.tsx  menu.tsx  sheet-menu.tsx  sidebar.tsx
frontend/src/components/dashboard/: token-trend-chart.tsx
frontend/src/components/monitor/: EventLog.tsx  MonitorPanel.tsx
frontend/src/components/ui/shadcn-io/ai/: actions.tsx  branch.tsx  code-block.tsx  conversation.tsx  image.tsx  inline-citation.tsx  loader.tsx  message.tsx  prompt-input.tsx  reasoning.tsx  source.tsx  (+5 more)
frontend/src/hooks/: useMonitorWebSocket.ts
frontend/src/lib/: api.ts  menu-list.ts
frontend/src/pages/: AiChatPage.tsx  Dashboard.tsx  ModelSettingsPage.tsx  TestCardPage.tsx
frontend/src/store/: model-settings.ts
frontend/src/stores/: wsStore.ts
frontend/src/types/: monitor.ts
models/: message.py  monitor.py
scripts/: start-backend.js  start-dev.js
tests/: test_llm_service.py
